<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profiler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rentedbanana.stressrepelant.ProfilerActivity">

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/genderText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinner2" />

    <TextView
        android:text="@string/profile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/genderText"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/spinner"
        android:layout_alignEnd="@+id/ageText"
        android:layout_alignStart="@+id/ageText" />

    <TextView
        android:text="@string/profile_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/raceText"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/spinner"
        android:layout_below="@+id/ageText"
        android:layout_alignStart="@+id/spinner2" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/spinner3"
        android:layout_below="@+id/raceText"
        android:layout_alignStart="@+id/spinner2" />

    <TextView
        android:text="@string/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/ageText"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/profile_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:onClick="createAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:id="@+id/button2" />

</RelativeLayout>
